--- a/gravityStudy/index.html
+++ b/gravityStudy/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gravity Study</title>
     <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.js"></script>
-    <script src="p5.dom.js"></script>
-    <script src="p5.sound.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
+    <script type="module" src="https://unpkg.com/p5.rec"></script>
     <script src="sketch.js"></script>
     <script src="particle.js"></script>
     <script src="planet.js"></script>
